k8s/apps/kourier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kourier
  namespace: kourier-system
  annotations:
    cert-manager.io/issuer: letsencrypt-stg
spec:
  ingressClassName: "nginx"
  rules:
    - host: "*.knative.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kourier
                port:
                  number: 8080
  tls:
    - hosts:
        - "*.knative.walnuts.dev"
      secretName: kourier-tls
